compiler/testData/asJava/lightClasses/compilationErrors/EnumNameOverride.java
public enum EnumNameOverride implements Bar {
    ;

    private EnumNameOverride() { /* compiled code */ }
}
